part of desktop version

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -25,6 +25,12 @@
                 ./images/hero_tablet_2x.png 2x
               "
               media="(min-width: 768px) and (max-width:1279px)" />
+            <source
+              srcset="
+                ./images/hero_desktop.png    1x,
+                ./images/hero_desktop_2x.png 2x
+              "
+              media="(min-width: 1280px)" />
             <img
               class="image__main"
               src="./images/hero_mobile.png"
