--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,5 +1,6 @@
 <section class="section">
   <div class="problems__background">
+    <!-- <div class="problems__background__icon"></div> -->
     <div class="container">
       <h2 class="problems__title">
         The main problems of students in English UPE, which we
