--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -4,104 +4,181 @@
       <h2 class="reviews__title">Feedback from graduates</h2>
       <ul class="reviews__slide__track">
         <li class="reviews__slide__item">
-          <img
-            class="reviews__image"
-            src="./images/reviewers/reviewer1.png"
-            srcset="./images/reviewers/reviewer1_2x.png"
-            alt="picture of reviewer"
-          />
-          <svg class="vk">
-            <use href="./images/icons/icons.svg#icon-vk"></use>
-          </svg>
-          <p class="reviews__name">Tonya Kucherovskaya</p>
-          <p class="reviews__description">
-            Graduated from 2015, National University of Bioresources and natural
-            history of Ukraine
-          </p>
-          <article class="reviews__review">
-            In a short time with Elena, I mastered grammmar and replenished my
-            completely empty vocabulary. From the first lesson I realized that I
-            was on my plate. Elena and I became friends because she was really
-            worried about my success. She became an authority for me, but I did
-            not tremble in class, fearing to make the slightest mistake. Now I
-            can brag that I'm student...
-            <a class="review__more" href="https://vk.com/">Read more</a>
-          </article>
+          <div class="reviews__decorations">
+            <picture>
+              <source
+                srcset="
+                  ./images/reviewers/reviewer1_mobile.png    1x,
+                  ./images/reviewers/reviewer1_mobile_2x.png 2x
+                "
+                media="(max-width: 767px)"
+              />
+              <source
+                srcset="
+                  ./images/reviewers/reviewer1_tablet.png    1x,
+                  ./images/reviewers/reviewer1_tablet_2x.png 2x
+                "
+                media="(min-width: 768px) and (max-width:1279px)"
+              />
+              <img
+                class="reviews__image"
+                src="./images/reviewers/reviewer1_mobile.png"
+                alt="picture of Tonya"
+              />
+            </picture>
+            <svg class="vk">
+              <use href="./images/icons/icons.svg#icon-vk"></use>
+            </svg>
+          </div>
+          <div class="reviews__texts">
+            <p class="reviews__name">Tonya Kucherovskaya</p>
+            <p class="reviews__description">
+              Graduated from 2015, National University of Bioresources and
+              natural history of Ukraine
+            </p>
+            <article class="reviews__review">
+              In a short time with Elena, I mastered grammmar and replenished my
+              completely empty vocabulary. From the first lesson I realized that
+              I was on my plate. Elena and I became friends because she was
+              really worried about my success. She became an authority for me,
+              but I did not tremble in class, fearing to make the slightest
+              mistake. Now I can brag that I'm student...
+              <a class="review__more" href="https://vk.com/">Read more</a>
+            </article>
+          </div>
         </li>
         <li class="reviews__slide__item">
-          <img
-            class="reviews__image"
-            src="./images/reviewers/reviewer2.png"
-            srcset="./images/reviewers/reviewer2_2x.png"
-            alt="picture of reviewer"
-          />
-          <svg class="vk">
-            <use href="./images/icons/icons.svg#icon-vk"></use>
-          </svg>
-          <p class="reviews__name">Natasza Solonckiya</p>
-          <p class="reviews__description">
-            Graduated from 2015, National University of Bioresources and natural
-            history of Ukraine
-          </p>
-          <article class="reviews__review">
-            The Hellen language school I've been attending for several months
-            has been a tremendous help in improving my language fluency.
-            Initially, I struggled with comprehension and speaking in English,
-            but now I feel much more confident. Conversations with teacher and
-            fellow students have truly assisted me in practicing speaking.
-            However, I am still working on improving my accent...
-            <a class="review__more" href="https://vk.com/">Read more</a>
-          </article>
+          <div class="reviews__decorations">
+            <picture>
+              <source
+                srcset="
+                  ./images/reviewers/reviewer2_mobile.png    1x,
+                  ./images/reviewers/reviewer2_mobile_2x.png 2x
+                "
+                media="(max-width: 767px)"
+              />
+              <source
+                srcset="
+                  ./images/reviewers/reviewer2_tablet.png    1x,
+                  ./images/reviewers/reviewer2_tablet_2x.png 2x
+                "
+                media="(min-width: 768px) and (max-width:1279px)"
+              />
+              <img
+                class="reviews__image"
+                src="./images/reviewers/reviewer2_mobile.png"
+                alt="picture of Natasza"
+              />
+            </picture>
+            <svg class="vk">
+              <use href="./images/icons/icons.svg#icon-vk"></use>
+            </svg>
+          </div>
+          <div class="reviews__texts">
+            <p class="reviews__name">Natasza Solonckiya</p>
+            <p class="reviews__description">
+              Graduated from 2015, National University of Bioresources and
+              natural history of Ukraine
+            </p>
+            <article class="reviews__review">
+              The Hellen language school I've been attending for several months
+              has been a tremendous help in improving my language fluency.
+              Initially, I struggled with comprehension and speaking in English,
+              but now I feel much more confident. Conversations with teacher and
+              fellow students have truly assisted me in practicing speaking.
+              However, I am still working on improving my accent...
+              <a class="review__more" href="https://vk.com/">Read more</a>
+            </article>
+          </div>
         </li>
         <li class="reviews__slide__item">
-          <img
-            class="reviews__image"
-            src="./images/reviewers/reviewer3.png"
-            srcset="./images/reviewers/reviewer3_2x.png"
-            alt="picture of reviewer"
-          />
-          <svg class="vk">
-            <use href="./images/icons/icons.svg#icon-vk"></use>
-          </svg>
-          <p class="reviews__name">Olga Momotiuk</p>
-          <p class="reviews__description">
-            Graduated from 2015, National University of Bioresources and natural
-            history of Ukraine
-          </p>
-          <article class="reviews__review">
-            My experience with Elena has resulted in a significant expansion of
-            my vocabulary. She regularly introduce new words and idioms that are
-            later practiced in various contexts. As a result, my English
-            vocabulary has greatly broadened. For example, recently, we learned
-            the expression "barking up the wrong tree," which means looking for
-            something in the wrong place. However...
-            <a class="review__more" href="https://vk.com/">Read more</a>
-          </article>
+          <div class="reviews__decorations">
+            <picture>
+              <source
+                srcset="
+                  ./images/reviewers/reviewer3_mobile.png    1x,
+                  ./images/reviewers/reviewer3_mobile_2x.png 2x
+                "
+                media="(max-width: 767px)"
+              />
+              <source
+                srcset="
+                  ./images/reviewers/reviewer3_tablet.png    1x,
+                  ./images/reviewers/reviewer3_tablet_2x.png 2x
+                "
+                media="(min-width: 768px) and (max-width:1279px)"
+              />
+              <img
+                class="reviews__image"
+                src="./images/reviewers/reviewer3_mobile.png"
+                alt="picture of Olga"
+              />
+            </picture>
+            <svg class="vk">
+              <use href="./images/icons/icons.svg#icon-vk"></use>
+            </svg>
+          </div>
+          <div class="reviews__texts">
+            <p class="reviews__name">Olga Momotiuk</p>
+            <p class="reviews__description">
+              Graduated from 2015, National University of Bioresources and
+              natural history of Ukraine
+            </p>
+            <article class="reviews__review">
+              My experience with Elena has resulted in a significant expansion
+              of my vocabulary. She regularly introduce new words and idioms
+              that are later practiced in various contexts. As a result, my
+              English vocabulary has greatly broadened. For example, recently,
+              we learned the expression "barking up the wrong tree," which means
+              looking for something in the wrong place. However...
+              <a class="review__more" href="https://vk.com/">Read more</a>
+            </article>
+          </div>
         </li>
         <li class="reviews__slide__item">
-          <img
-            class="reviews__image"
-            src="./images/reviewers/reviewer4.png"
-            srcset="./images/reviewers/reviewer4_2x.png"
-            alt="picture of reviewer"
-          />
-          <svg class="vk">
-            <use href="./images/icons/icons.svg#icon-vk"></use>
-          </svg>
-          <p class="reviews__name">Svietlana Romanova</p>
-          <p class="reviews__description">
-            Graduated from 2015, National University of Bioresources and natural
-            history of Ukraine
-          </p>
-          <article class="reviews__review">
-            This is a place where I truly grasped the most challenging grammar
-            rules. Elena always take the time to explain complex concepts, which
-            has been immensely helpful. An example of a difficult rule I
-            understood is the use of the third conditional sentence. The school
-            also offers plenty of practical exercises that allow me to solidify
-            these challenging rules. This place genuinely prioritizes...
-            <a class="review__more" href="https://vk.com/">Read more</a>
-          </article>
+          <div class="reviews__decorations">
+            <picture>
+              <source
+                srcset="
+                  ./images/reviewers/reviewer4_mobile.png    1x,
+                  ./images/reviewers/reviewer4_mobile_2x.png 2x
+                "
+                media="(max-width: 767px)"
+              />
+              <source
+                srcset="
+                  ./images/reviewers/reviewer4_tablet.png    1x,
+                  ./images/reviewers/reviewer4_tablet_2x.png 2x
+                "
+                media="(min-width: 768px) and (max-width:1279px)"
+              />
+              <img
+                class="reviews__image"
+                src="./images/reviewers/reviewer4_mobile.png"
+                alt="picture of Svietlana"
+              />
+            </picture>
+            <svg class="vk">
+              <use href="./images/icons/icons.svg#icon-vk"></use>
+            </svg>
+          </div>
+          <div class="reviews__texts">
+            <p class="reviews__name">Svietlana Romanova</p>
+            <p class="reviews__description">
+              Graduated from 2015, National University of Bioresources and
+              natural history of Ukraine
+            </p>
+            <article class="reviews__review">
+              This is a place where I truly grasped the most challenging grammar
+              rules. Elena always take the time to explain complex concepts,
+              which has been immensely helpful. An example of a difficult rule I
+              understood is the use of the third conditional sentence. The
+              school also offers plenty of practical exercises that allow me to
+              solidify these challenging rules. This place genuinely
+              prioritizes...
+              <a class="review__more" href="https://vk.com/">Read more</a>
+            </article>
+          </div>
         </li>
       </ul>
       <div class="reviews__slide__nav">
