--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -6,6 +6,11 @@
     padding-bottom: 2em;
   }
 }
+@media screen and (min-width: 1280px) {
+  .section--header {
+    padding-bottom: 2.8em;
+  }
+}
 .header {
   display: flex;
   justify-content: space-between;
@@ -26,6 +31,37 @@
     }
   }
 }
+@media screen and (min-width: 1280px) {
+  .header {
+    &__navigation {
+      &--desktop {
+        display: flex;
+        flex-direction: row;
+      }
+    }
+  }
+}
+@media screen and (min-width: 1280px) {
+  .navigation__desktop {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    &__item:not(:first-child) {
+      margin-left: 0.875em;
+    }
+    &__link {
+      font-size: 0.875em;
+      font-weight: getFontWeight('font-bold');
+      color: getColor('primary-gray');
+      text-transform: uppercase;
+      text-decoration: none;
+      &:focus,
+      &:hover {
+        color: getColor('brand-color');
+      }
+    }
+  }
+}
 .logo__img {
   width: 75%;
   &--mobile {
@@ -40,6 +76,7 @@
     }
   }
 }
+
 .smallmenu {
   color: getColor('black');
   display: flex;
@@ -60,7 +97,11 @@
     width: 1.31em;
   }
 }
-
+@media screen and (min-width: 1280px) {
+  .smallmenu {
+    display: none;
+  }
+}
 .mobile {
   display: none;
   &__top {
@@ -163,6 +204,16 @@
     }
   }
 }
+@media screen and (min-width: 1280px) {
+  .navigation {
+    width: 100%;
+    &__desktop__link--button {
+      padding: 1.875em 1.625em;
+      margin-left: 0em;
+    }
+  }
+}
+
 .navigation__item:not(:last-child) {
   margin-bottom: 1em;
 }
