--- a/src/sass/_howWeDo.scss
+++ b/src/sass/_howWeDo.scss
@@ -88,7 +88,8 @@
       gap: 1.675em;
     }
     &__item {
-      justify-content: center;
+      justify-content: flex-start;
+      align-items: center;
       flex-basis: 20.875em;
       height: 20.875em;
       padding: 2.5em 1.375em;
@@ -103,7 +104,38 @@
         line-height: 2.3;
       }
       &__icon {
+        object-fit: cover;
         margin-bottom: 1.25em;
+      }
+    }
+  }
+}
+@media screen and (min-width: 1280px) {
+  .how {
+    align-items: flex-start;
+    &__title {
+      font-size: 2.875em;
+      margin-bottom: 1.1em;
+    }
+    &__list {
+      justify-content: space-evenly;
+      gap: 1.25em;
+    }
+    &__item {
+      padding: 2.5em 1.875em;
+      flex-basis: 24.75em;
+      height: 24.75em;
+      &__title {
+        font-size: 1.25em;
+        line-height: 1.4;
+      }
+      &__text {
+        font-size: 1.125em;
+        letter-spacing: 0.09em;
+        line-height: 1.55;
+      }
+      &__icon {
+        margin-bottom: 1.875em;
       }
     }
   }
