--- a/src/sass/_program.scss
+++ b/src/sass/_program.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
   &__list {
     padding-left: 4.625em;
   }
@@ -63,26 +64,25 @@
       color: getColor('primary-gray');
       &--image {
         @extend .program__item__details;
-        position: relative;
         padding-right: 10em;
-        &::after {
-          content: '';
-          background-image: url(../images/program_picture_clipped_mobile.png);
-          background-size: contain;
-          background-repeat: no-repeat;
-          display: inline-block;
-          position: absolute;
-          top: 0em;
-          right: -6.2em;
-          width: 176px;
-          height: 137px;
-        }
       }
     }
   }
   &__background {
     padding-top: 3.125em;
     background-color: getColor('black');
+    position: relative;
+    &::after {
+      content: '';
+      background-image: url(../images/program_picture_clipped_mobile.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+      position: absolute;
+      bottom: -7.25em;
+      right: 0;
+      width: 122px;
+      height: 137px;
+    }
   }
   &__title {
     font-size: 1.25em;
@@ -128,24 +128,87 @@
       &__details {
         &--image {
           padding-right: 10em;
-          &::after {
-            content: '';
-            background-image: url(../images/program_picture_clipped_tablet.png);
-            top: -10em;
-            right: -38em;
-            width: 384px;
-            height: 280px;
-          }
         }
       }
     }
     &__background {
       padding-top: 3.2em;
+      &::after {
+        background-image: url(../images/program_picture_clipped_tablet.png);
+        width: 384px;
+        height: 280px;
+      }
     }
     &__title {
       font-size: 1.625em;
       letter-spacing: 0.05em;
       padding-bottom: 2em;
+    }
+  }
+}
+@media screen and (min-width: 1280px) {
+  .program {
+    align-items: flex-start;
+    &__list {
+      padding-left: 4.2em;
+      display: flex;
+      flex-direction: row;
+    }
+    &__item {
+      &:not(:last-child) {
+        padding-bottom: 1.875em;
+        &::before {
+          content: '';
+          position: absolute;
+          width: 98%;
+          height: 0.1em;
+          background-color: getColor('primary-gray');
+          top: 0em;
+          left: 0em;
+        }
+      }
+
+      &__semester {
+        letter-spacing: 0.07em;
+        &::before {
+          margin-right: 3.125em;
+        }
+      }
+      &__description {
+        padding-left: 1.75em;
+        display: flex;
+        flex-direction: row;
+      }
+
+      &__resource {
+        display: flex;
+        flex-direction: column;
+        padding-left: 3em;
+        margin-top: 0.6em;
+        margin-bottom: 0.6em;
+        flex-basis: 11em;
+        &:first-child {
+          padding-left: 1.6em;
+        }
+      }
+      &__details {
+        &--image {
+          padding-right: 10em;
+        }
+      }
+    }
+    &__background {
+      padding-top: 7.5em;
+      &::after {
+        background-image: url(../images/program_picture_clipped_tablet.png);
+        width: 384px;
+        height: 280px;
+      }
+    }
+    &__title {
+      font-size: 2.875em;
+      letter-spacing: 0.08em;
+      padding-bottom: 2.17em;
     }
   }
 }
