--- a/src/sass/_reviews.scss
+++ b/src/sass/_reviews.scss
@@ -2,7 +2,72 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  &__title {
+    padding-top: 2.5em;
+    max-width: 60%;
+    padding-bottom: 1.05em;
+    font-size: 1.25em;
+    font-weight: getFontWeight('font-extrabold');
+    letter-spacing: 0.03em;
+    line-height: 1.3;
+    text-align: center;
+  }
+  &__slide__track {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    //height: 553px;
+    height: 50vh;
+    width: 100%;
+    margin-bottom: 1em;
+  }
+  &__slide__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+  }
+  &__decorations {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__texts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    margin-bottom: 1.25em;
+    width: 5.6em;
+    height: 5.6em;
+    border-radius: 50%;
+  }
+  &__name {
+    padding-bottom: 0.625em;
+    font-size: 0.875em;
+    font-weight: getFontWeight('font-extrabold');
+    letter-spacing: 0.1em;
+    color: getColor('brand-color');
+  }
+  &__description {
+    padding: 0 1.75em;
+    margin-bottom: 1.8em;
+    font-size: 0.75em;
+    font-weight: getFontWeight('font-medium');
+    letter-spacing: 0.07em;
+    line-height: 1.67;
+    text-align: center;
+    color: getColor('primary-gray');
+  }
+  &__review {
+    @extend .reviews__description;
+    color: getColor('black');
+  }
   &__slide__nav {
     display: flex;
     flex-direction: column;
@@ -32,7 +97,72 @@
     }
   }
 }
-
+@media screen and (min-width: 768px) {
+  .reviews {
+    &__title {
+      padding-top: 1.95em;
+      padding-bottom: 1.15em;
+      font-size: 1.625em;
+    }
+    &__slide__track {
+      //height: 553px;
+      height: 30vh;
+      width: 100%;
+      margin-bottom: 1em;
+    }
+    &__slide__item {
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
+    &__texts {
+      max-width: 55%;
+      align-items: flex-start;
+      margin-left: 2.875em;
+    }
+    &__image {
+      width: 9.375em;
+      height: 9.375em;
+    }
+    &__name {
+      padding-bottom: 1em;
+      font-size: 1.25em;
+    }
+    &__description {
+      padding: 0 0em;
+      margin-bottom: 1.7em;
+      text-align: start;
+    }
+    &__slide__nav {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      //gap: 1.09rem;
+      transition: all 0.5s ease-out;
+      &__person {
+        font-weight: getFontWeight('font-semibold');
+        font-size: 0.875em;
+        line-height: 1.4;
+        text-align: center;
+      }
+      &__indicator {
+        margin-top: 1em;
+        display: flex;
+        gap: 1.2em;
+        padding: 0;
+        list-style: none;
+        transition: all 0.5s ease-out;
+        &__item {
+          cursor: pointer;
+          transition: transform 0.3s ease-in-out;
+          &:hover {
+            transform: scale(1.2);
+          }
+        }
+      }
+    }
+  }
+}
 .icon {
   &--3elipse {
     width: 2em;
@@ -54,68 +184,40 @@
     transition: fill 0.5s ease-in-out;
   }
 }
+@media screen and (min-width: 768px) {
+  .icon {
+    &--3elipse {
+      width: 2em;
+      height: 0.3em;
+      fill: getColor('primary-gray');
+      transition: 0.5s ease-in-out;
+    }
+    &--home {
+      width: 1em;
+      height: 1em;
+      fill: getColor('primary-gray');
+      transition: fill 0.5s ease-in-out;
+    }
 
-.reviews__title {
-  padding-top: 2.5em;
-  max-width: 75%;
-  padding-bottom: 1.05em;
-  font-size: 1.25em;
-  font-weight: getFontWeight('font-extrabold');
-  letter-spacing: 0.03em;
-  line-height: 1.3;
-  text-align: center;
-}
-.reviews__slide__track {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  //height: 553px;
-  height: 50vh;
-  width: 100%;
-  margin-bottom: 1em;
-}
-.reviews__slide__item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: absolute;
-}
-.reviews__image {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  margin-bottom: 1.25em;
-  width: 5.6em;
-  height: 5.6em;
-  border-radius: 50%;
-  background-color: red;
+    &--elipse {
+      width: 0.8rem;
+      height: 0.8rem;
+      fill: getColor('guarantee-gray');
+      transition: fill 0.5s ease-in-out;
+    }
+  }
 }
 .vk {
   margin-bottom: 1.25em;
   width: 2em;
   height: 2em;
 }
-.reviews__name {
-  padding-bottom: 0.625em;
-  font-size: 0.875em;
-  font-weight: getFontWeight('font-extrabold');
-  letter-spacing: 0.1em;
-  color: getColor('brand-color');
-}
-.reviews__description {
-  padding: 0 1.75em;
-  margin-bottom: 1.8em;
-  font-size: 0.75em;
-  font-weight: getFontWeight('font-medium');
-  letter-spacing: 0.07em;
-  line-height: 1.67;
-  text-align: center;
-  color: getColor('primary-gray');
-}
-.reviews__review {
-  @extend .reviews__description;
-  color: getColor('black');
+@media screen and (min-width: 768px) {
+  .vk {
+    margin-bottom: 0em;
+    // width: 2em;
+    // height: 2em;
+  }
 }
 .review__more {
   font-size: 1em;
