desktop all parts

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section id="contacts" class="section">
+<section id="contacts" class="section--blanc">
   <div class="contacts__background">
     <div class="contacts__background__color">
       <div class="container">
