--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -17,6 +17,12 @@
                 ./images/elena_tablet_2x.png 2x
               "
               media="(min-width: 768px) and (max-width:1279px)" />
+            <source
+              srcset="
+                ./images/elena_desktop.png    1x,
+                ./images/elena_desktop_2x.png 2x
+              "
+              media="(min-width: 1280px)" />
             <img
               class="about__img"
               src="./images/elena_mobile.png"
