--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -3,7 +3,7 @@
     <div class="container">
       <h2 class="problems__title--benefits">Why do people choose us</h2>
       <div class="list__background--benefits">
-        <ol class="problems__list">
+        <ol class="problems__list--benefits">
           <li class="problems__item--benefits">Training in small groups</li>
           <li class="problems__item--benefits">Rendered notes</li>
           <li class="problems__item--benefits">
