--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -17,6 +17,12 @@
                 ./images/logo_tablet_2x.jpg 2x
               "
               media="(min-width: 768px) and (max-width:1279px)" />
+              <source
+              srcset="
+                ./images/logo_desktop.jpg    1x,
+                ./images/logo_desktop_2x.jpg 2x
+              "
+              media="(min-width: 1280px)" />
         <img
           src="./images/logo_mobile.jpg"
           alt="logo"          
