--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -20,6 +20,10 @@
                 "
                 media="(min-width: 768px) and (max-width:1279px)"
               />
+              <source
+                srcset="./images/reviewers/reviewer1_tablet_2x.png 2x"
+                media="(min-width: 1280px)"
+              />
               <img
                 class="reviews__image"
                 src="./images/reviewers/reviewer1_mobile.png"
@@ -63,6 +67,10 @@
                   ./images/reviewers/reviewer2_tablet_2x.png 2x
                 "
                 media="(min-width: 768px) and (max-width:1279px)"
+              />
+              <source
+                srcset="./images/reviewers/reviewer2_tablet_2x.png 2x"
+                media="(min-width: 1280px)"
               />
               <img
                 class="reviews__image"
@@ -108,6 +116,10 @@
                 "
                 media="(min-width: 768px) and (max-width:1279px)"
               />
+              <source
+                srcset="./images/reviewers/reviewer3_tablet_2x.png 2x"
+                media="(min-width: 1280px)"
+              />
               <img
                 class="reviews__image"
                 src="./images/reviewers/reviewer3_mobile.png"
@@ -151,6 +163,10 @@
                   ./images/reviewers/reviewer4_tablet_2x.png 2x
                 "
                 media="(min-width: 768px) and (max-width:1279px)"
+              />
+              <source
+                srcset="./images/reviewers/reviewer4_tablet_2x.png 2x"
+                media="(min-width: 1280px)"
               />
               <img
                 class="reviews__image"
