--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -1,3 +1,6 @@
+.section--blanc {
+  @extend .section;
+}
 .contacts {
   display: flex;
   flex-direction: column;
@@ -103,6 +106,41 @@
     }
   }
 }
+@media screen and (min-width: 1280px) {
+  .section--blanc {
+    padding-bottom: 0em;
+  }
+  .contacts {
+    padding: 6.25em 2em;
+    &__background {
+      background-image: url(../images/contact_image_desktop.jpg);
+    }
+    &__title {
+      margin-bottom: 1.1em;
+      font-size: 2.875em;
+      max-width: 100%;
+    }
+    &__description {
+      margin-bottom: 1.85em;
+      font-size: 1.875em;
+      max-width: 100%;
+    }
+    &__inputs {
+      width: 30vw;
+      margin-bottom: 2.75em;
+    }
+    &__input {
+      padding: 1.15em 2em;
+      margin-bottom: 2.25em;
+      width: 95%;
+      font-size: 1.25em;
+      &::placeholder {
+        font-size: 1.25em;
+        letter-spacing: 0.07em;
+      }
+    }
+  }
+}
 .hero__button--contacts {
   @extend .hero__button;
   margin-right: auto;
@@ -112,5 +150,10 @@
 @media screen and (min-width: 768px) {
   .hero__button--contacts {
     padding: 1.25em 3.5em;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .hero__button--contacts {
+    padding: 1.875em 5.25em;
   }
 }
