--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,7 @@
 @import './variables';
 @import './mixins';
 @import './common';
+@import './modal';
 @import './header';
 @import './hero';
 @import './advantages';
